podfile typo fix

--- a/Quickstart/Podfile
+++ b/Quickstart/Podfile
@@ -4,5 +4,5 @@ target 'BoostlingoQuickstart' do
   platform :ios, '10.0'
   use_frameworks!
 
-  pod 'BoostlingoSDK', '->0.1.5'
+  pod 'BoostlingoSDK', '0.1.5'
 end
