--- a/Quickstart/Podfile
+++ b/Quickstart/Podfile
@@ -1,8 +1,16 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
 target 'BoostlingoQuickstart' do
-  platform :ios, '11.0'
+  platform :ios, '12.0'
   use_frameworks!
 
   pod 'BoostlingoSDK', '0.5.10'
+end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
+    end
+  end
 end
